third_party/cronet/cronet.idl_c.h

// Forward declare interfaces.
typedef struct Cronet_Buffer Cronet_Buffer;
typedef struct Cronet_BufferCallback Cronet_BufferCallback;
typedef struct Cronet_Runnable Cronet_Runnable;
typedef struct Cronet_Executor Cronet_Executor;
typedef struct Cronet_Engine Cronet_Engine;
typedef struct Cronet_UrlRequestStatusListener Cronet_UrlRequestStatusListener;
typedef struct Cronet_UrlRequestCallback Cronet_UrlRequestCallback;
typedef struct Cronet_UploadDataSink Cronet_UploadDataSink;
typedef struct Cronet_UploadDataProvider Cronet_UploadDataProvider;
typedef struct Cronet_UrlRequest Cronet_UrlRequest;
typedef struct Cronet_RequestFinishedInfoListener
    Cronet_RequestFinishedInfoListener;
// Forward declare structs.
typedef struct Cronet_Error Cronet_Error;
typedef struct Cronet_QuicHint Cronet_QuicHint;
typedef struct Cronet_PublicKeyPins Cronet_PublicKeyPins;
typedef struct Cronet_EngineParams Cronet_EngineParams;
typedef struct Cronet_HttpHeader Cronet_HttpHeader;
typedef struct Cronet_UrlResponseInfo Cronet_UrlResponseInfo;
typedef struct Cronet_UrlRequestParams Cronet_UrlRequestParams;
typedef struct Cronet_DateTime Cronet_DateTime;
typedef struct Cronet_Metrics Cronet_Metrics;
typedef struct Cronet_RequestFinishedInfo Cronet_RequestFinishedInfo;
CRONET_EXPORT void Cronet_UrlRequestParams_Destroy(
    Cronet_UrlRequestParamsPtr self);